HHH-14449 Replace usages of List.of with Arrays.asList